@@ -4,7 +4,7 @@
 general.showtray=true
 general.mintotray=true
 general.debug=false
-general.wowdb=http\://wow.allakhazam.com/db/item.html?witem\=%s
+general.wowdb=http\://www.wowhead.com/item\=%s
 
 log.maxentries=500
 status.updateinterval=500
